...
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp">

                        <EditText
                            android:inputType="text"
                            android:id="@+id/edit_text_class_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:hint="Nome da Sala"
                            android:paddingLeft="10dp" />

...
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">

                        <EditText
                            android:inputType="textAutoComplete"
                            android:id="@+id/edit_text_institution"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:hint="Instituição"
                            android:paddingLeft="10dp"
                            />
...
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">

                        <EditText
                            android:inputType="numberDecimal"
                            android:id="@+id/edit_text_size_groups"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLength="2"

                            android:hint="Tamanho do Grupo"
                            android:paddingLeft="10dp"
...
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp">

                        <EditText
                            android:id="@+id/edit_text_cut_grade"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Nota de Corte"
                            android:maxLength="2"

                            android:inputType="numberDecimal"
...
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">

                        <EditText
                            android:inputType="numberDecimal"
                            android:id="@+id/edit_text_addition"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLength="2"

                            android:hint="Acréscimo"
                            android:paddingLeft="10dp"
...
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp">

                        <EditText
                            android:inputType="textPassword"
                            android:id="@+id/edit_text_class_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:hint="Senha da Sala"
                            android:paddingLeft="10dp"
                            />
...
