<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fga.mds.gpp.trezentos.View.Activity.SignInActivity"
    android:background="#ffbd19"
    android:orientation="vertical">

    <ImageView
        android:layout_width="230dp"
        android:layout_height="230dp"
        android:id="@+id/logo_image"
        android:src="@drawable/trezentoslogo"
        android:layout_gravity="center"
         />

    <android.support.design.widget.TextInputLayout
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="5dp">

        <EditText
            android:inputType="textEmailAddress"
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_height="40dp"

            android:hint="@string/txt_email"
            android:textColor="@color/textRegisterColor"
            android:textColorHint="@android:color/black"
            android:background="@drawable/rounded_edit_text"

            android:paddingLeft="10dp"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <EditText
            android:inputType="textPassword"
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/txt_password"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/textRegisterColor"
            android:textColorHint="@android:color/black"
            android:background="@drawable/rounded_edit_text"

            android:paddingLeft="10dp"

            />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_register_button"
        android:text="@string/btn_login"
        android:textColor="#FFFFFF" />

    <com.facebook.login.widget.LoginButton
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:id="@+id/button_sign_in_facebook"
        android:layout_width="335dp"
        android:layout_height="45dp"
        facebook:com_facebook_login_text="@string/btn_fb_login"

        android:paddingBottom="11dp"
        android:paddingTop="11dp"
        android:textColor="#FFFFFF"
        android:textSize="13sp"

        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:weightSum="3">

        <Button
            android:layout_weight="1"
            android:id="@+id/button_register"
            android:background="@android:color/transparent"
            android:text="@string/btn_login_to_sign_up"
            android:textColor="#000"
            android:textSize="13sp"
            android:layout_width="88dp"
            android:layout_height="48dp"
            android:layout_marginRight="8dp"
            />

        <Button
            android:layout_weight="1"
            android:id="@+id/button_about"
            android:layout_width="88dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:text="@string/btn_about"
            android:textColor="#000"/>


        <Button
            android:layout_weight="1"
            android:id="@+id/button_forgot_password"
            android:layout_width="88dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:text="@string/btn_forgot_password"
            android:textColor="#000"
            />


    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:visibility="gone" />

</LinearLayout>
